--- a/package.json
+++ b/package.json
@@ -27,15 +27,19 @@
     "eslint-plugin-import": "^1.11.1",
     "exports-loader": "^0.6.3",
     "file-loader": "^0.11.1",
+    "flickity": "^2.0.10",
     "gulp": "^3.9.1",
     "gulp-babel": "^6.1.2",
     "gulp-postcss": "^6.1.1",
     "gulp-util": "^3.0.7",
     "hugo-bin": "^0.12.0",
     "imports-loader": "^0.7.1",
+    "lodash": "^4.17.4",
     "normalize.css": "^7.0.0",
+    "p5": "^0.5.14",
     "postcss-cssnext": "^2.7.0",
     "postcss-import": "^10.0.0",
+    "slug": "^0.9.1",
     "url-loader": "^0.5.7",
     "webpack": "^2.6.0",
     "whatwg-fetch": "^1.0.0"
