add related posts, style code snippets

--- a/site/config.toml
+++ b/site/config.toml
@@ -2,8 +2,12 @@ baseurl = "/"
 languageCode = "en-us"
 languageLang = "en"
 title = "Unicorns Fart Pixels"
+
 paginate = 10
 paginatePath = "page"
+
+pygmentsCodeFences = true
+pygmentsUseClasses = true
 
 [[menu.main]]
     name = "about"
