revert to 550b6b41a679a696a5c0fa91237e658d1d0dfb45

--- a/site/config.toml
+++ b/site/config.toml
@@ -4,6 +4,8 @@ languageLang = "en"
 title = "Unicorns Fart Pixels"
 paginate = 10
 paginatePath = "page"
+pygmentsCodeFences = true
+pygmentsUseClasses = true
 
 [[menu.main]]
     name = "about"
