--- a/site/config.toml
+++ b/site/config.toml
@@ -12,7 +12,7 @@ paginatePath = "page"
 [[menu.main]]
     name = "archives"
     identifier = "archives"
-    url = "/tags/"
+    url = "/archives/"
 [[menu.main]]
     name = "contact"
     identifier = "contact"
