--- a/site/config.toml
+++ b/site/config.toml
@@ -4,6 +4,7 @@ languageLang = "en"
 title = "Unicorns Fart Pixels"
 paginate = 10
 paginatePath = "page"
+googleAnalytics = "UA-108727696-1"
 
 [[menu.main]]
     name = "about"
@@ -13,6 +14,10 @@ paginatePath = "page"
     name = "archives"
     identifier = "archives"
     url = "/archives/"
+[[menu.main]]
+    name = "quicktips"
+    identifier = "quicktips"
+    url = "/quicktips/"
 [[menu.main]]
     name = "contact"
     identifier = "contact"
